--- a/index.css
+++ b/index.css
@@ -32,6 +32,9 @@
 
 }
 /* General Styles */
+/*html{
+  scroll-behavior: smooth;
+}*/
 
 body {
   background: var(--clr-light);
@@ -45,8 +48,6 @@ body {
 section{
   padding: 5em 2em;
 }
-  
-
 
 img{
   display: block;
@@ -107,6 +108,7 @@ header {
     justify-content: space-between;
     padding: 1em;
     
+    
 }
 .logo__img {
   width: 10%;
@@ -121,7 +123,6 @@ header {
     left:0;
     right:0;
     z-index: 100;
-    
     transform: translateX(100%);
     transition: transform 250ms cubic-bezier(.5,0,.5,1);
     
@@ -158,6 +159,24 @@ header {
     right: 1em;
     top: 1em;
     z-index: 1000;
+}
+.nav-open .nav{
+  transform:translateX(0);
+}
+.nav-open .nav-toggle{
+  position: fixed;
+}
+
+.nav-open .hamburger{
+  transform: rotate(.625turn);
+}
+
+.nav-open .hamburger::before{
+  transform: rotate(90deg) translateX(-6px);
+}
+
+.nav-open .hamburger::after{
+  opacity: 0;
 }
 
 .hamburger {
